# PythonFundamentals

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: greetings.yml  pythonpackage.yml
01_python3_core_fundementals/slides/: 01_01_using_the_python_interpreter.md  01_02_python_source_code_managment.md  03_01_using_the_python_interpreter.md  03_02_python_source_code_managment.md
01_python3_tooling_build_systems/: Pipfile  lab_3.py
01_python3_tooling_build_systems/slides/: 01_01_recommended_ides.md  01_02_installing_python_modules.md  01_03_venv_usage_and_setup.md  01_04_pipenv_usage_and_setup.md  01_05_poetry_usage_and_setup.md
02_python3_packaging_managment/slides/: 02_01_scaffolding_your_project.md  02_02_init_packaging_system.md  02_03_down_slecting_packages.md
02_python3_tooling_build_systems/: lab_4.py  pyproject.toml
02_python3_tooling_build_systems/completed/: lab_3_completed.py
02_python3_tooling_build_systems/slides/: 01_02_installing_python_modules.md  01_03_venv_usage_and_setup.md  01_04_pipenv_usage_and_setup.md  01_05_poetry_usage_and_setup.md  02_01_recommended_ides.md  02_02_installing_python_modules.md  02_03_venv_usage_and_setup.md  02_04_pipenv_usage_and_setup.md  02_05_poetry_usage_and_setup.md
03_python3_packaging_managment/lab-project/: pyproject.toml
04_python3_types/: lab_1.py  lab_2.py
05_python3_variables/: lab_1.py  lab_2.py
06_python3_flow_control/: lab_1.py
PyFun_Setup/: README.md
PyFun_Types/: README.md  lab_1.py  lab_2.py
PyFun_Variables/: README.md  lab_1.py  lab_2.py
(+82 files in other folders)
