[tool.poetry]
name = "pythonfundamentals"
version = "0.1.0"
description = ""
authors = ["Alexander Rymdeko-Harvey"]

[tool.poetry.dependencies]
python = "^3.6"
termcolor = "^1.1.0"
colorama = "^0.4.3"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
