[tool.poetry]
name = "01_python3_tooling_build_systems"
version = "0.1.0"
description = ""
authors = ["Alexander Rymdeko-Harvey"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.3"
termcolor = "^1.1.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
